Actualiza version de spring-boot a 3.2.2