@@ -1,6 +1,7 @@
 package com.carlosarroyoam.bookservice.services;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 import org.assertj.core.api.Assertions;
@@ -17,17 +18,17 @@ import com.carlosarroyoam.bookservice.repositories.BookRepository;
 
 @ExtendWith(MockitoExtension.class)
 class BookServiceTest {
+
 	@Mock
-	BookRepository bookRepository;
+	private BookRepository bookRepository;
 
 	@InjectMocks
-	BookService bookService;
+	private BookService bookService;
 
 	@Test
 	@DisplayName("Test method return empty list when there's no books")
-	void testFindAll() {
-		List<Book> expectedBooks = List.of();
-
+	void findAll() {
+		List<Book> expectedBooks = Collections.emptyList();
 		Mockito.when(bookRepository.findAll()).thenReturn(expectedBooks);
 
 		List<Book> books = bookService.findAll();
@@ -37,14 +38,14 @@ class BookServiceTest {
 
 	@Test
 	@DisplayName("Tests findAll return list of books")
-	void testFindAllReturnBooks() {
+	void findAllReturnBooks() {
 		List<Book> expectedBooks = List.of(new Book("Homo Deus", "Yuval Noah", 12.99d, LocalDate.of(2018, 12, 1), true),
 				new Book("Homo Deus", "Yuval Noah", 12.99d, LocalDate.of(2018, 12, 1), true));
-
 		Mockito.when(bookRepository.findAll()).thenReturn(expectedBooks);
 
 		List<Book> books = bookService.findAll();
 
 		Assertions.assertThat(books).isNotNull().isNotEmpty().size().isEqualTo(2);
 	}
+
 }
